# vetmanager

./: Cargo.toml  LICENSE  Makefile  docker-compose.yaml
backend/: Cargo.toml  Dockerfile.api  Dockerfile.dev.in  Makefile
backend-old/: .gitignore  Cargo.toml  Makefile  sedder_helper.mk
backend-old/migrations/2022-01-23-153422_create_users/: up.sql
backend-old/src/: main.rs  schema.rs  state.rs
backend-old/src/auth/: http.rs  mod.rs
backend-old/src/repository/: mod.rs
backend-old/src/users/: mod.rs  models.rs  repository.rs
backend/src/: db.rs  errors.rs  lib.rs  main.rs  metrics.rs  response.rs  settings.rs
backend/src/auth/: sign_in.rs
backend/src/db/: mod.rs
backend/src/http/: main.rs
