[package]
name = "vetmanager-backend"
version = "0.0.1"
authors = ["Svätopluk Hanzel <svatoplukhanzel@pm.me>"]
edition = "2018"


[[bin]]
name = "api"
path = "src/main.rs"

[dependencies]
config = "0.13.2"
slog = "2.7.0"
slog-async = "2.7.0"
slog-term = "2.9.0"
sentry = "0.27.0"
sentry-slog = "0.27.0"
serde = "1.0.142"
serde_json = "1.0.83"
tokio = { version = "1.20.1", features = ["full"] }
prost = "0.11"
diesel = { version = "1.4", features = ["postgres", "r2d2"] }
diesel_migrations = "1.4.0"
r2d2 = "0.8"
warp = "0.3"
bcrypt = "0.13"

[build-dependencies]
tonic-build = "0.8"
