[package]
name = "vetmanager-backend"
version = "0.0.1"
authors = ["Svätopluk Hanzel <svatoplukhanzel@pm.me>"]
edition = "2018"


[[bin]]
name = "api"
path = "src/main.rs"

[dependencies]
config = "0.11.0"
slog = "2.7.0"
slog-async = "2.6.0"
slog-term = "2.8.0"
sentry = "0.23.0"
sentry-slog = "0.23.0"
serde = "1.0.127"
serde_json = "1.0.66"
tide = "0.16.0"
diesel = { version = "1.4.4", features = ["postgres"] }
